@@ -1,0 +1,4 @@
+Significance: minor
+Type: add
+
+Add - Add endpoint to retrieve a file content via API.
