@@ -82,6 +82,7 @@ function _manually_load_plugin() {
 	require_once $_plugin_dir . 'includes/admin/tracks/class-tracker.php';
 	require_once $_plugin_dir . 'includes/notes/class-wc-payments-notes-additional-payment-methods.php';
 	require_once $_plugin_dir . 'includes/admin/class-wc-rest-payments-reader-controller.php';
+	require_once $_plugin_dir . 'includes/admin/class-wc-rest-payments-files-controller.php';
 }
 
 tests_add_filter( 'muplugins_loaded', '_manually_load_plugin' );
